# video-automation

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  desktop_app.py  desktop_app.spec  desktop_app_lite.spec  requirements-core.txt  requirements-optional.txt  requirements-transcription-faster.txt  requirements-transcription-funasr.txt  requirements.txt  run_worker.py
docs/: DESKTOP_LITE_README.md  PROJECT_STRUCTURE.md  plan-funasr-integration.md  plan-olived-integration.md
examples/: batch.example.json
installer/: VideoAutomationLite.iss
native/video_automation_native/: Cargo.toml  pyproject.toml
native/video_automation_native/src/: cuts.rs  lib.rs
promo/: video-automation-intro-landscape.html  video-automation-intro-vertical.html
tests/: test_api_security.py  test_architecture_state.py  test_auto_version_workflow.py  test_automation.py  test_automation_api.py  test_automation_ui.mjs  test_bilibili_provider.py  test_cleanup.py  test_clip_editor.mjs  test_clip_refinement.py  test_clip_time.mjs  test_config.py  test_cover_panel.mjs  test_cuts.py  test_dashboard.mjs  test_desktop_app.py  test_detail_layout.mjs  test_detail_tabs.mjs  test_download_section.mjs  test_enhancement_panel.mjs  test_error_advisor.py  test_events.py  test_frontend_foundation.mjs  test_google_providers.py  test_health.mjs  test_health_backend.py  test_highlight_cut.py  test_hooks.py  test_i18n.mjs  test_job_actions.mjs  test_job_detail_data.mjs  test_job_detail_view.mjs  test_job_runtime.py  test_job_status.mjs  test_jobs.py  (+51 more)
(+129 files in other folders)
